--- a/minigame-demo/project.config.json
+++ b/minigame-demo/project.config.json
@@ -42,7 +42,7 @@
   "compileType": "miniprogram",
   "libVersion": "2.19.4",
   "appid": "wxfe3f5aacfaeb59fa",
-  "projectname": "turbo sdk miniprogram demo",
+  "projectname": "turbo sdk minigame demo",
   "condition": {},
   "editorSetting": {
     "tabIndent": "insertSpaces",
