--- a/package.json
+++ b/package.json
@@ -1,12 +1,30 @@
 {
-  "name": "turbo-sdk-miniprogram",
+  "name": "turbo-sdk-minigame",
   "version": "3.1.5",
-  "description": "turbo miniprogram sdk",
+  "description": "turbo minigame sdk",
   "main": "turbo.min.js",
+  "scripts": {
+    "build": "webpack --config ./webpack.config.js"
+  },
   "keywords": [
     "turbo",
-    "mininprogram",
+    "minigame",
     "sdk"
   ],
-  "author": "GravityInfinite"
+  "author": "GravityInfinite",
+  "devDependencies": {
+    "@babel/core": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^9.0.1",
+    "babel-plugin-add-module-exports": "^1.0.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "prettier": "^2.7.1"
+  }
 }
