--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
-  "name": "turbo-sdk-miniprogram",
+  "name": "turbo-sdk-minigame",
   "version": "3.1.5",
-  "description": "turbo miniprogram sdk",
+  "description": "turbo minigame sdk",
   "main": "turbo.min.js",
+  "scripts": {
+    "build": "webpack --config ./webpack.config.js"
+  },
   "keywords": [
     "turbo",
-    "mininprogram",
+    "miningame",
     "sdk"
   ],
-  "author": "GravityInfinite"
+  "author": "GravityInfinite",
+  "devDependencies": {
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "prettier": "^2.7.1"
+  }
 }
