--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "turbo minigame sdk",
   "main": "turbo.min.js",
   "scripts": {
-    "build": "webpack --config ./webpack.config.js"
+    "build": "webpack --config ./webpack.config.js && cp ./dist/turbo.min.js ./minigame-demo/js/utils/turbo.min.js"
   },
   "keywords": [
     "turbo",
